--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -15,6 +15,24 @@ a{
     color: black;
 }
 
+#toggle{
+    width: 5%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    text-align: center;
+    padding-top: 100px;
+}
+#toggle i{
+
+    font-size: 20px;
+    margin-bottom: 30px;
+
+
+}
+
 #container{
     width: 60%;
     height: auto;
@@ -95,4 +113,23 @@ h3{
     width: 100%;
     height: 20px;
     background-color: var(--header-box-color);
+}
+
+
+
+
+
+
+
+
+/* scrollbar design */
+::-webkit-scrollbar{
+    width: 6px;
+}
+::-webkit-scrollbar-track{
+    background-color: var(--bg-black-100);
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--skin-color);
+    border-radius: 5px;
 }
