--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;500&display=swap');
 :root{
-    --header-box-color: #202952;
-    --image-background-color: #ffffff;
+    --skin-color:#202952;
+    --image-background-color: #fbfbfb;
     --text-color: rgb(192, 8, 8);
 }
-h1,h2{
+
+h4,h2{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #fbfbfb;
 }
 p,li,a,h5,h6{
     font-size: 12px;
@@ -13,24 +15,6 @@ p,li,a,h5,h6{
 }
 a{
     color: black;
-}
-
-#toggle{
-    width: 5%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    text-align: center;
-    padding-top: 100px;
-}
-#toggle i{
-
-    font-size: 20px;
-    margin-bottom: 30px;
-
-
 }
 
 #container{
@@ -43,13 +27,12 @@ a{
 #header{
     width: 100%;
     height: 20%;
-    color: #ffffff;
 }
 #header >div{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: var(--header-box-color);
+    background-color: var(--skin-color);
 }
 
 #header img{
@@ -102,7 +85,7 @@ h3{
 }
 
 #projects .line{
-    height: 190px;
+    height: 180px;
     overflow: hidden;
 }
 
@@ -112,7 +95,7 @@ h3{
 #footer{
     width: 100%;
     height: 20px;
-    background-color: var(--header-box-color);
+    background-color: var(--skin-color);
 }
 
 
@@ -127,7 +110,7 @@ h3{
     width: 6px;
 }
 ::-webkit-scrollbar-track{
-    background-color: var(--bg-black-100);
+    background-color: black;
 }
 ::-webkit-scrollbar-thumb{
     background-color: var(--skin-color);
