--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -110,7 +110,7 @@ h3{
     width: 6px;
 }
 ::-webkit-scrollbar-track{
-    background-color: black;
+    background-color: rgb(255, 254, 254);
 }
 ::-webkit-scrollbar-thumb{
     background-color: var(--skin-color);
