--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -7,7 +7,7 @@
 
 h4,h2{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #fbfbfb;
+    color: #ffffff;
 }
 p,li,a,h5,h6{
     font-size: 12px;
