--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -44,9 +44,11 @@ a{
 #containt{
     display: flex;
     height: 100%;
+    width: 100%;
 }
 #containt >div{
     width: 60%;
+    height: 100%;
    
 }
 #containt >div:nth-child(1)
@@ -98,7 +100,81 @@ h3{
     background-color: var(--skin-color);
 }
 
+@media only screen and (min-width:500px) and (max-width:842px) {
 
+    #container{
+        width: 100%;
+        margin-top: 0%;
+    }
+
+
+
+}
+
+@media only screen and (min-width:200px) and (max-width:500px) {
+
+
+    p,li,a,h5,h6{
+        font-size: 10px;
+        font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    h2{
+        font-size:14px;
+
+    }
+    h4{
+        font-size:10px;
+        
+    }
+    #header img{
+        width: 60px;
+        height: 60px;
+    
+    }
+
+    #container{
+        width: 100%;
+        margin-top: 0%;
+    }
+
+    #header>div{
+        display: flex;
+    }
+   
+
+    #containt{
+        display: block;
+        margin-bottom: 600px;
+    }
+    #containt>div:nth-child(1){
+        width: 100%;
+    }
+    #containt>div:nth-child(2)
+    {
+        width: 80%;
+    }
+
+    .details h3{
+        text-align: center;
+    }
+    
+
+    .details i{
+        font-size: 12px;
+        margin-left: 25%;
+    }
+    
+    ul{
+        list-style-type: none;
+        margin-left: 20%;
+    }
+    #education{
+        margin-left: 10%;
+    }
+
+
+
+}
 
 
 
